# mono-neural-net

./: CMakeLists.txt  NN2_design.txt  README.md  TODO.md  mono_neural_net.pc.in
include/: NN.h  NN2.h  RNG.h
include/layers/: fully_connected.h  recurrent.h
lagacy/include/: __NN.h
lagacy/src/: __NN.c  __main.c
src/: NN.c  NN2.c  fully_connected.c  main.c  recurrent.c
test/: main.c  rnn_test.c
